# Baguette-Bot-Discord-Ultimate-Best-Bot-La-Revolution

./: .gitignore  config.env  config.py  keep_alive.py  main.py  pyproject.toml
cogs/: currency.py  errorhandler.py  eval.py  fun.py  help.py  levels.py  logging.py  misc.py  serverinfo.py  spotify.py  stats.py  whois.py
